// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates typings for module export-from-js 1`] = `
"declare module 'export-from-js' {
    import 'react';

    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module export-from-jsx 1`] = `
"declare module 'export-from-jsx' {
    import 'react';

    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module stage-2-syntax 1`] = `
"declare module 'stage-2-syntax' {
    import {Component} from 'react';

    export interface MyComponentProps {
        foo: string;
    }

    export class MyComponent extends Component<MyComponentProps, any> {
        render(): JSX.Element;

    }

}

"
`;

exports[`generates typings for module with-css-modules 1`] = `
"declare module 'with-css-modules' {
    import 'react';

    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-dependency 1`] = `
"declare module 'with-dependency' {
    import 'react';

    export interface TestDependencyProps {
        foo: string;
    }

    export function TestDependency(props: TestDependencyProps): JSX.Element;

    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-es5-dependency 1`] = `
"declare module 'with-es5-dependency' {
    import 'react';

    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;
